[metadata]
name = chrompy
version = 0.0.1
description = Analysis of single cell chromatin accessibility data in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
author = Zhijian Li
author_email = lzj1769@gmail.com

[options]
packages = find: