[metadata]
name = pychromvar
version = 0.0.1
description = A Python package for inferring transcription-factor-associated accessibility from single-cell epigenomic data
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
author = Zhijian Li
author_email = lzj1769@gmail.com

[options]
packages = find:
install_requires =
    requests
    anndata
    mudata
    MOODS-python
    biopython
    pyjaspar
    pysam
    ucsc_genomes_downloader